--- a/app/src/main/res/layout/change_the_one_dialog_fragment.xml
+++ b/app/src/main/res/layout/change_the_one_dialog_fragment.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
-            android:text="@string/t1_member"
+            android:text="@string/tell"
             android:textSize="20sp"
             android:textStyle="bold"
             android:textColor="@color/blackText"
