--- a/app/src/main/res/layout/fragment_payment_select_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_select_methods.xml
@@ -48,7 +48,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:text="เปลี่ยน"
+                android:text="@string/issue"
+                android:layout_marginStart="16dp"
                 app:layout_constraintBottom_toBottomOf="@+id/input_the1_card_id"
                 app:layout_constraintStart_toEndOf="@+id/input_the1_card_id" />
 
