--- a/app/src/main/res/layout/view_edit_text_boder.xml
+++ b/app/src/main/res/layout/view_edit_text_boder.xml
@@ -30,6 +30,7 @@
     </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
