--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -122,14 +122,14 @@
             android:padding="8dp"
             android:visibility="gone" />
 
-        <TextView
+        <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/tvPaymentDescription"
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="8dp"
-            android:text="payment description..."
+            android:text="@string/payment_description"
             android:visibility="gone" />
 
         <LinearLayout
