--- a/app/src/pwb/res/layout/app_bar_product.xml
+++ b/app/src/pwb/res/layout/app_bar_product.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/ic_search_bar"
             android:background="?android:attr/selectableItemBackground"
             />
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="15dp" />
+            android:layout_marginEnd="15dp" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyShoppingCartView
             android:id="@+id/shopping_cart"
@@ -60,7 +60,6 @@
             android:layout_height="48dp"
             android:layout_centerInParent="true"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"/>
 
     </android.support.v7.widget.Toolbar>
