--- a/app/src/pwb/res/layout/app_bar_compare.xml
+++ b/app/src/pwb/res/layout/app_bar_compare.xml
@@ -30,6 +30,13 @@
             android:src="@mipmap/ic_launcher"
             android:contentDescription="@string/app_name" />
 
+        <cenergy.central.com.pwb_store.view.LanguageButton
+            android:id="@+id/switch_language_button"
+            android:layout_width="96dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:layout_margin="8dp" />
+
         <ImageView
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
