CDS - fixed order api and update new version

--- a/app/src/cds/res/values/styles.xml
+++ b/app/src/cds/res/values/styles.xml
@@ -41,6 +41,12 @@
         <item name="android:textColor">@color/cdsRed</item>
     </style>
 
+    <style name="textHeader">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
     <!-- Form -->
     <style name="Form" />
 
