--- a/app/src/main/res/layout/fragment_compare.xml
+++ b/app/src/main/res/layout/fragment_compare.xml
@@ -6,13 +6,14 @@
     android:background="@color/white">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/compareRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:paddingLeft="4dp"
         android:paddingRight="4dp"
+        android:clipToPadding="false"
         android:background="@color/white">
 
     </android.support.v7.widget.RecyclerView>
