--- a/app/src/main/res/layout/item_compare_product_item.xml
+++ b/app/src/main/res/layout/item_compare_product_item.xml
@@ -67,60 +67,22 @@
             android:orientation="vertical">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                android:id="@+id/txt_product_brand"
-                style="@style/textNameProduct"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:textColor="@color/nameProductColor"
-                app:typeFaceAsset="RobotoLight.ttf"
-                tools:text="APPLE"/>
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 android:id="@+id/txt_product_description"
-                android:layout_width="match_parent"
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
-                android:maxLines="1"
+                android:gravity="center_horizontal"
+                android:maxLines="2"
+                android:minLines="2"
                 android:textColor="@color/nameProductColor"
-                android:textSize="16sp"
-                android:textStyle="normal"
-                app:typeFaceAsset="RobotoLight.ttf"
                 tools:text="iPhone SE MLXN2TH/A"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <Button
+                android:id="@+id/btnAddToCart"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="1">
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/txt_product_old_price"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:maxLines="1"
-                    android:textColor="@color/nameProductColor"
-                    android:textSize="12sp"
-                    app:typeFaceAsset="RobotoLight.ttf"
-                    tools:text="16,800"/>
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/txt_product_new_price"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:gravity="end"
-                    android:maxLines="1"
-                    android:textColor="@color/specialPriceColor"
-                    android:textSize="12sp"
-                    android:textStyle="bold"
-                    app:typeFaceAsset="RobotoLight.ttf"
-                    tools:text="12,600"/>
-
-            </LinearLayout>
-
+                android:text="Add to cart "/>
         </LinearLayout>
 
     </RelativeLayout>
