--- a/app/src/main/res/layout/list_item_compare_product_header.xml
+++ b/app/src/main/res/layout/list_item_compare_product_header.xml
@@ -1,31 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="56dp"
-    android:background="@android:color/white"
-    app:cardCornerRadius="0dp"
-    app:cardElevation="0dp">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="14dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <cenergy.central.com.pwb_store.view.PowerBuyTextView
+        android:id="@+id/txt_header_filter"
+        style="@style/textCompare"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="14dp">
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="16dp"
+        android:ellipsize="end"
+        android:text="@string/compare_header" />
 
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            android:id="@+id/txt_header_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:ellipsize="end"
-            android:layout_marginLeft="16dp"
-            style="@style/textCompare"
-            app:typeFaceAsset="RobotoLight.ttf"
-            android:text="@string/compare_header"/>
-
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+</LinearLayout>
