--- a/app/src/main/res/layout/list_item_text_header_compare_detail.xml
+++ b/app/src/main/res/layout/list_item_text_header_compare_detail.xml
@@ -9,13 +9,13 @@
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/labelTextView"
+        style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical"
         android:textColor="@color/blackText"
-        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
