--- a/app/src/main/res/layout/item_compare_product_item.xml
+++ b/app/src/main/res/layout/item_compare_product_item.xml
@@ -22,8 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="269dp"
         android:background="?android:attr/selectableItemBackground">
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="269dp">-->
 
         <LinearLayout
             android:id="@+id/layout_image_view"
@@ -50,7 +48,6 @@
             android:id="@+id/img_cancel"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:background="?android:attr/selectableItemBackground"
             android:src="@drawable/ic_cancel_copy"
@@ -59,9 +56,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
             android:layout_below="@+id/layout_image_view"
             android:gravity="center"
             android:orientation="vertical">
@@ -80,9 +75,13 @@
 
             <Button
                 android:id="@+id/btnAddToCart"
+                style="@style/Button.Primary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add to cart "/>
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/add_to_cart"/>
         </LinearLayout>
 
     </RelativeLayout>
