--- a/app/src/main/res/layout/item_compare_product_item.xml
+++ b/app/src/main/res/layout/item_compare_product_item.xml
@@ -7,10 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
-    android:layout_marginStart="4dp"
-    android:layout_marginEnd="4dp"
+    android:padding="4dp"
     android:orientation="horizontal"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="0dp"
