--- a/app/src/rbs/res/layout/app_bar_compare.xml
+++ b/app/src/rbs/res/layout/app_bar_compare.xml
@@ -30,15 +30,12 @@
             android:src="@mipmap/ic_launcher"
             android:contentDescription="@string/app_name" />
 
-        <ImageView
-            android:id="@+id/search_button"
-            android:layout_width="wrap_content"
+        <cenergy.central.com.pwb_store.view.LanguageButton
+            android:id="@+id/switch_language_button"
+            android:layout_width="96dp"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="end"
-            android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_search_bar"
-            android:contentDescription="@string/app_name" />
+            android:layout_gravity="end|center_vertical"
+            android:layout_margin="8dp" />
 
         <cenergy.central.com.pwb_store.view.PowerBuyShoppingCartView
             android:id="@+id/shopping_cart_compare"
