--- a/app/src/main/res/layout/list_item_cannot_show_spec_compare_detail.xml
+++ b/app/src/main/res/layout/list_item_cannot_show_spec_compare_detail.xml
@@ -2,8 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/headDetail">
+    android:layout_height="wrap_content">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/textView"
