--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,10 @@
     <dimen name="raised_button_card_elevation">2dp</dimen>
     <dimen name="raised_button_cardCornerRadius">4dp</dimen>
     <dimen name="common_40_dp">40dp</dimen>
+
+    <dimen name="margin_padding_xsmall">4dp</dimen>
+    <dimen name="margin_padding_small">8dp</dimen>
+    <dimen name="margin_padding_normal">16dp</dimen>
+    <dimen name="margin_padding_large">24dp</dimen>
+    <dimen name="margin_padding_xlarge">32dp</dimen>
 </resources>
