--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -99,41 +99,6 @@
 
     </LinearLayout>
 
-    <!--<LinearLayout-->
-    <!--android:id="@+id/productTypeLayout"-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:layout_marginEnd="16dp"-->
-    <!--android:orientation="horizontal"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toEndOf="@id/guideline40"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/productIdLayout">-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/img_pro_first"-->
-    <!--android:layout_width="60dp"-->
-    <!--android:layout_height="30dp"-->
-    <!--android:contentDescription="@string/product_detail"-->
-    <!--android:paddingTop="5dp" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/img_pro_second"-->
-    <!--android:layout_width="60dp"-->
-    <!--android:layout_height="30dp"-->
-    <!--android:contentDescription="@string/product_detail"-->
-    <!--android:paddingTop="5dp" />-->
-
-    <!--<ImageView-->
-    <!--android:id="@+id/img_pro_third"-->
-    <!--android:layout_width="60dp"-->
-    <!--android:layout_height="30dp"-->
-    <!--android:contentDescription="@string/product_detail"-->
-    <!--android:paddingTop="5dp" />-->
-
-    <!--</LinearLayout>-->
-
     <LinearLayout
         android:id="@+id/productSpacialPriceLayout"
         android:layout_width="0dp"
@@ -248,11 +213,10 @@
         android:layout_marginEnd="16dp"
         android:layout_weight="1"
         android:completionThreshold="1"
-        app:act_header="@string/size"
         android:visibility="gone"
+        app:act_header="@string/size"
         app:act_required="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/inputProductShade"
         app:layout_constraintStart_toEndOf="@id/guideline40"
         app:layout_constraintTop_toBottomOf="@+id/badge_2h" />
 
@@ -263,35 +227,50 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:visibility="gone"
         android:layout_weight="1"
         android:completionThreshold="1"
+        android:visibility="gone"
         app:act_header="@string/shade"
         app:act_required="false"
+        app:layout_constraintBottom_toTopOf="@id/stockIndicatorView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintBottom_toTopOf="@id/groupActionButton"
         app:layout_constraintTop_toBottomOf="@+id/inputProductSize" />
+
+    <cenergy.central.com.pwb_store.view.StockIndicatorView
+        android:id="@+id/stockIndicatorView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_marginTop="@dimen/margin_padding_small"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline40"
+        app:layout_constraintBottom_toTopOf="@+id/groupActionButton"
+        app:layout_constraintTop_toBottomOf="@+id/inputProductShade" />
+
+    <ProgressBar
+        android:id="@+id/stockIndicatorLoading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/AlertDialogTheme"
+        app:layout_constraintBottom_toBottomOf="@+id/stockIndicatorView"
+        app:layout_constraintEnd_toEndOf="@+id/stockIndicatorView"
+        app:layout_constraintStart_toStartOf="@+id/stockIndicatorView"
+        app:layout_constraintTop_toTopOf="@+id/stockIndicatorView" />
 
     <LinearLayout
         android:id="@+id/groupActionButton"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="@dimen/margin_padding_small"
+        android:layout_marginEnd="@dimen/margin_padding_normal"
+        android:layout_marginBottom="@dimen/margin_padding_small"
         android:gravity="bottom"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintTop_toBottomOf="@+id/inputProductShade">
-
-        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
-            android:id="@+id/addToCartButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:text="@string/add_to_cart"/>
+        app:layout_constraintStart_toEndOf="@id/guideline40">
 
         <LinearLayout
             android:id="@+id/layoutButton"
@@ -309,7 +288,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 app:btn_default="true"
-                app:text="@string/product_available"/>
+                app:text="@string/product_available" />
 
             <cenergy.central.com.pwb_store.view.PowerBuyIconButton
                 android:id="@+id/addToCompareButton"
@@ -320,8 +299,14 @@
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 app:btn_default="true"
-                app:text="@string/product_compare"/>
+                app:text="@string/product_compare" />
         </LinearLayout>
+
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+            android:id="@+id/addToCartButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:text="@string/add_to_cart" />
     </LinearLayout>
     <!-- endregion -->
 
@@ -329,10 +314,9 @@
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="24dp"
         android:background="@color/lightGray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvProductImage" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
