--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -208,9 +208,9 @@
         android:id="@+id/inputProductSize"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_padding_small"
+        android:layout_marginTop="@dimen/margin_padding_small"
+        android:layout_marginEnd="@dimen/margin_padding_normal"
         android:layout_weight="1"
         android:completionThreshold="1"
         android:visibility="gone"
@@ -224,9 +224,10 @@
         android:id="@+id/inputProductShade"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_padding_small"
+        android:layout_marginTop="@dimen/margin_padding_small"
+        android:layout_marginEnd="@dimen/margin_padding_normal"
+        android:layout_marginBottom="@dimen/margin_padding_small"
         android:layout_weight="1"
         android:completionThreshold="1"
         android:visibility="gone"
@@ -242,11 +243,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        android:layout_marginTop="@dimen/margin_padding_small"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintBottom_toTopOf="@+id/groupActionButton"
-        app:layout_constraintTop_toBottomOf="@+id/inputProductShade" />
+        app:layout_constraintBottom_toTopOf="@+id/groupActionButton" />
 
     <ProgressBar
         android:id="@+id/stockIndicatorLoading"
