--- a/app/src/main/res/layout/fragment_product_overview.xml
+++ b/app/src/main/res/layout/fragment_product_overview.xml
@@ -31,7 +31,7 @@
             android:drawableStart="@drawable/ic_overview"
             android:drawablePadding="8dp"
             android:paddingTop="8dp"
-            android:paddingEnd="8dp"
+            android:layout_marginEnd="8dp"
             android:paddingBottom="8dp"
             android:text="@string/product_overview"
             android:textColor="@color/nameProductColor"
@@ -43,7 +43,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_keyboard_arrow_down" />
+            android:src="@drawable/ic_keyboard_arrow_down"
+            android:contentDescription="@string/app_name" />
     </LinearLayout>
 
     <View
@@ -97,7 +98,7 @@
             android:drawableStart="@drawable/ic_overview"
             android:drawablePadding="8dp"
             android:paddingTop="8dp"
-            android:paddingEnd="8dp"
+            android:layout_marginEnd="8dp"
             android:paddingBottom="8dp"
             android:text="@string/product_info"
             android:textColor="@color/nameProductColor"
@@ -109,7 +110,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_keyboard_arrow_down" />
+            android:src="@drawable/ic_keyboard_arrow_down"
+            android:contentDescription="@string/app_name" />
     </LinearLayout>
 
     <View
@@ -121,7 +123,7 @@
         app:layout_constraintTop_toBottomOf="@+id/infoLayout" />
 
     <LinearLayout
-        android:id="@+id/infowWebLayout"
+        android:id="@+id/infoWebLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -153,7 +155,7 @@
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/infowWebLayout">
+        app:layout_constraintTop_toBottomOf="@+id/infoWebLayout">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/tvSpecHeader"
@@ -164,7 +166,7 @@
             android:drawableStart="@drawable/ic_specification"
             android:drawablePadding="8dp"
             android:paddingTop="8dp"
-            android:paddingEnd="8dp"
+            android:layout_marginEnd="8dp"
             android:paddingBottom="8dp"
             android:text="@string/product_spec"
             android:textColor="@color/nameProductColor"
@@ -176,7 +178,8 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginEnd="8dp"
-            android:src="@drawable/ic_keyboard_arrow_down" />
+            android:src="@drawable/ic_keyboard_arrow_down"
+            android:contentDescription="@string/app_name" />
     </LinearLayout>
 
     <View
