EO-289 Enable 2H pickup button in PDP

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -199,10 +199,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/line1"
+        android:contentDescription="@string/app_name"
         app:layout_constraintStart_toEndOf="@+id/guideline40"
-        tools:src="@drawable/ic_2h_badge_en"
-        android:contentDescription="@string/app_name" />
+        app:layout_constraintTop_toBottomOf="@+id/line1"
+        tools:src="@drawable/ic_2h_badge_en" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
         android:id="@+id/inputProductSize"
@@ -243,9 +243,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/layoutButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintBottom_toTopOf="@+id/groupActionButton" />
+        app:layout_constraintStart_toEndOf="@id/guideline40" />
 
     <ProgressBar
         android:id="@+id/stockIndicatorLoading"
@@ -257,65 +257,78 @@
         app:layout_constraintStart_toStartOf="@+id/stockIndicatorView"
         app:layout_constraintTop_toTopOf="@+id/stockIndicatorView" />
 
-    <LinearLayout
-        android:id="@+id/groupActionButton"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/layoutButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="@dimen/margin_padding_small"
-        android:layout_marginEnd="@dimen/margin_padding_normal"
-        android:layout_marginBottom="@dimen/margin_padding_small"
-        android:gravity="bottom"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40">
 
         <cenergy.central.com.pwb_store.view.PowerBuyIconButton
             android:id="@+id/addToCartButton"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:btn_default="false"
+            app:layout_constraintBottom_toTopOf="@+id/availableStoreButton"
+            app:layout_constraintEnd_toStartOf="@id/addTwoHourToCartButton"
+            app:layout_constraintStart_toStartOf="parent"
             app:text="@string/add_to_cart" />
 
-        <LinearLayout
-            android:id="@+id/layoutButton"
-            android:layout_width="match_parent"
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+            android:id="@+id/addTwoHourToCartButton"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="2">
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            app:btn_default="true"
+            app:layout_constraintBottom_toTopOf="@id/addToCompareButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/addToCartButton"
+            app:text="@string/add_two_hour_item" />
 
-            <cenergy.central.com.pwb_store.view.PowerBuyIconButton
-                android:id="@+id/availableStoreButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight="1"
-                app:btn_default="true"
-                app:text="@string/product_available" />
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+            android:id="@+id/availableStoreButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:btn_default="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/addToCompareButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:text="@string/product_available" />
 
-            <cenergy.central.com.pwb_store.view.PowerBuyIconButton
-                android:id="@+id/addToCompareButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_weight="1"
-                app:btn_default="true"
-                app:text="@string/product_compare" />
-        </LinearLayout>
-    </LinearLayout>
-    <!-- endregion -->
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+            android:id="@+id/addToCompareButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            app:btn_default="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/availableStoreButton"
+            app:text="@string/product_compare" />
+    </android.support.constraint.ConstraintLayout>
 
     <View
         android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:background="@color/lightGray"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
