EO-294 Adjust "Add to Cart" button enable rules in PDP

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -261,6 +261,8 @@
         android:id="@+id/layoutButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40">
@@ -269,10 +271,10 @@
             android:id="@+id/addToCartButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
             app:btn_default="false"
             app:layout_constraintBottom_toTopOf="@+id/availableStoreButton"
             app:layout_constraintEnd_toStartOf="@id/addTwoHourToCartButton"
@@ -285,8 +287,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             app:btn_default="true"
             app:layout_constraintBottom_toTopOf="@id/addToCompareButton"
             app:layout_constraintEnd_toEndOf="parent"
@@ -297,10 +299,10 @@
             android:id="@+id/availableStoreButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp"
             app:btn_default="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/addToCompareButton"
@@ -313,8 +315,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             app:btn_default="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
