CA-298 StorePickup - Implemented selection store 2h then show detail of store and on selected store 2h

--- a/app/src/main/res/layout/list_item_stores.xml
+++ b/app/src/main/res/layout/list_item_stores.xml
@@ -7,9 +7,9 @@
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/store_name"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:paddingTop="16dp"
         android:paddingBottom="16dp"
         app:layout_constraintBottom_toTopOf="@+id/line_store"
