--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/stores_title"
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/backgroundHeaderBranchTitle"
+        android:ellipsize="end"
+        android:padding="16dp"
         android:text="@string/select_store_title"
         android:textColor="@color/textHeaderBranchTitle"
-        android:background="@color/backgroundHeaderBranchTitle"
-        android:textSize="18sp"
-        android:padding="16dp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:ellipsize="end"
-        app:typeFaceAsset="RobotoLight.ttf"/>
+        app:typeFaceAsset="RobotoLight.ttf" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_list_stores"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/stores_title"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stores_title" />
 </android.support.constraint.ConstraintLayout>
