--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -102,19 +102,31 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="18dp"
         android:text="@string/qty"
         app:layout_constraintStart_toEndOf="@id/product_image_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart" />
 
-    <cenergy.central.com.pwb_store.view.PowerBuyIncreaseOrDecreaseView
+    <!--<cenergy.central.com.pwb_store.view.PowerBuyIncreaseOrDecreaseView-->
+        <!--android:id="@+id/qty_list_shopping_cart"-->
+        <!--android:layout_width="160dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="16dp"-->
+        <!--android:layout_marginTop="6dp"-->
+        <!--android:visibility="gone"-->
+        <!--app:layout_constraintStart_toEndOf="@+id/qty_title_list_shopping_cart"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart" />-->
+
+    <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
         android:id="@+id/qty_list_shopping_cart"
-        android:layout_width="160dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
+        android:completionThreshold="1"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="6dp"
-        app:layout_constraintStart_toEndOf="@+id/qty_title_list_shopping_cart"
-        app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart" />
+        app:act_required="false"
+        app:hide_header="true"
+        app:layout_constraintStart_toEndOf="@id/qty_title_list_shopping_cart"
+        app:layout_constraintTop_toBottomOf="@+id/price_list_shopping_cart"/>
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/txt_qty_title_list_shopping_cart"
@@ -122,7 +134,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintStart_toEndOf="@id/qty_list_shopping_cart"
         app:layout_constraintTop_toBottomOf="@id/price_list_shopping_cart"
         tools:text="6" />
@@ -133,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="18dp"
         android:text="@string/add_over_qty"
         android:textColor="@color/dangerColor"
         android:visibility="gone"
@@ -146,7 +158,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="18dp"
         android:gravity="end"
         android:maxLines="1"
         android:textSize="20sp"
